lkt/bootstrap/src/liblktlang.h

/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef struct lkt_base_node__struct *lkt_base_node;
/*
 * Type to contain Unicode text data.
 */
typedef struct {
   int length;
   int ref_count;
   uint32_t content[1];
} *lkt_string_type;
typedef uint8_t lkt_bool;
        

typedef struct lkt_internal_solver_diagnostic_array_record *lkt_internal_solver_diagnostic_array;
        



    typedef struct {
            lkt_internal_metadata md;
            lkt_env_rebindings_type rebindings;
            lkt_bool from_rebound;
    } lkt_internal_entity_info;
        



    typedef struct {
            lkt_base_node node;
            lkt_internal_entity_info info;
    } lkt_node;
        



    typedef struct {
            lkt_bool success;
            lkt_internal_solver_diagnostic_array diagnostics;
    } lkt_internal_solver_result;
        



/*

 */
struct lkt_internal_solver_diagnostic_array_record {
   int n;
   int ref_count;
   lkt_internal_solver_diagnostic items[1];
};
        



/*
 * Unit method. Return the NodeBuilder builtin type.
 */
extern int lkt_lkt_node_p_node_builder_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the Iterator builtin generic trait.
 */
extern int lkt_lkt_node_p_iterator_gen_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the Iterator builtin trait.
 */
extern int lkt_lkt_node_p_iterator_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ``AnalysisUnit`` builtin generic trait.
 */
extern int lkt_lkt_node_p_analysis_unit_gen_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ``AnalysisUnit`` builtin trait.
 */
extern int lkt_lkt_node_p_analysis_unit_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the topmost (from ``Self`` to the root node) FullDecl annotated with
 * ``@invalid``, null otherwise.
 */
extern int lkt_lkt_node_p_topmost_invalid_decl(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * If name resolution on this lkt compilation unit fails, this returns all the
 * diagnostics that were produced while resolving it.
 */
extern int lkt_lkt_node_p_nameres_diagnostics(
    lkt_node *node,


    lkt_internal_solver_diagnostic_array *value_p
);
        



/*
 * Finds the nearest parent that is an xref_entry_point and solve its equation.
 */
extern int lkt_lkt_node_p_solve_enclosing_context(
    lkt_node *node,


    lkt_internal_solver_result *value_p
);
        



/*
 * Designates entities that are entry point for the xref solving
 * infrastructure. If this returns true, then nameres_diagnostics can be called
 * on it.
 */
extern int lkt_lkt_node_p_xref_entry_point(
    lkt_node *node,


    lkt_bool *value_p
);
        



/*
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_argument_f_name(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_any_of``,
 * ``lkt_array_literal``, ``lkt_bin_op``, ``lkt_block_expr``,
 * ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_argument_f_value(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_base_lexer_case_rule_alt_f_send(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_lexer_case_rule_cond_alt_f_cond_exprs(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_any_of``,
 * ``lkt_array_literal``, ``lkt_bin_op``, ``lkt_block_expr``,
 * ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_base_match_branch_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the "match" part of the branch, either a pattern branch or a legacy
 * match branch with variable declaration.
 */
extern int lkt_base_match_branch_p_match_part(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_match_branch_f_decl(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_binding_pattern``,
 * ``lkt_bool_pattern``, ``lkt_extended_pattern``, ``lkt_filtered_pattern``,
 * ``lkt_integer_pattern``, ``lkt_list_pattern``, ``lkt_not_pattern``,
 * ``lkt_null_pattern``, ``lkt_or_pattern``, ``lkt_paren_pattern``,
 * ``lkt_regex_pattern``, ``lkt_tuple_pattern``, ``lkt_type_pattern``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_pattern_match_branch_f_pattern(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_val_decl``,
 * ``lkt_var_bind``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_block_expr_clause_f_clause(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return whether this node is present
 */
extern int lkt_class_qualifier_p_as_bool(
    lkt_node *node,


    lkt_bool *value_p
);
        



/*
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_decl_f_syn_name(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the image string using entity information.
 */
extern int lkt_decl_p_custom_image(
    lkt_node *node,


    lkt_string_type *value_p
);
        



/*
 * Return the name of the declaration type, as it should be seen by users/shown
 * in diagnostics.
 */
extern int lkt_decl_p_decl_type_name(
    lkt_node *node,


    lkt_string_type *value_p
);
        



/*
 * Get this declaration without rebindings information.
 */
extern int lkt_decl_p_as_bare_decl(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the type of the Decl.
 */
extern int lkt_decl_p_get_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * If we are casting an entity (Self) to something that is not an entity, make
 * it an entity.
 */
extern int lkt_decl_p_get_cast_type(
    lkt_node *node,

        
        const lkt_node*
        cast_to,

    lkt_node *value_p
);
        



/*
 * Return the type of Entity when we only keep elements of type keep_type. If
 * we are casting an entity (Self) to something that is not an entity, make it
 * an entity.
 */
extern int lkt_decl_p_get_keep_type(
    lkt_node *node,

        
        const lkt_node*
        keep_type,

    lkt_node *value_p
);
        



/*
 * If we are accessing a ParseField of an entity, then that field's type also
 * needs to be an entity.
 */
extern int lkt_decl_p_get_suffix_type(
    lkt_node *node,

        
        const lkt_node*
        prefix_type,

    lkt_node *value_p
);
        



/*
 * Returns whether the Decl is generic.
 */
extern int lkt_decl_p_is_generic(
    lkt_node *node,


    lkt_bool *value_p
);