lkt/bootstrap/src/liblktlang-implementation-c.ads


      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_node_builder_type";
   --  Unit method. Return the NodeBuilder builtin type.

           
   

   
   

   function lkt_lkt_node_p_iterator_gen_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_iterator_gen_trait";
   --  Unit method. Return the Iterator builtin generic trait.

           
   

   
   

   function lkt_lkt_node_p_iterator_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_iterator_trait";
   --  Unit method. Return the Iterator builtin trait.

           
   

   
   

   function lkt_lkt_node_p_analysis_unit_gen_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_analysis_unit_gen_trait";
   --  Unit method. Return the ``AnalysisUnit`` builtin generic trait.

           
   

   
   

   function lkt_lkt_node_p_analysis_unit_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_analysis_unit_trait";
   --  Unit method. Return the ``AnalysisUnit`` builtin trait.

           
   

   
   

   function lkt_lkt_node_p_topmost_invalid_decl
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_topmost_invalid_decl";
   --  Return the topmost (from ``Self`` to the root node) FullDecl annotated
   --  with ``@invalid``, null otherwise.

           
   

   
   

   function lkt_lkt_node_p_nameres_diagnostics
     (Node : lkt_node_Ptr;


      Value_P : access lkt_internal_solver_diagnostic_array) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_nameres_diagnostics";
   --  If name resolution on this lkt compilation unit fails, this returns all
   --  the diagnostics that were produced while resolving it.

           
   

   
   

   function lkt_lkt_node_p_solve_enclosing_context
     (Node : lkt_node_Ptr;


      Value_P : access lkt_internal_solver_result) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_solve_enclosing_context";
   --  Finds the nearest parent that is an xref_entry_point and solve its
   --  equation.

           
   

   
   

   function lkt_lkt_node_p_xref_entry_point
     (Node : lkt_node_Ptr;


      Value_P : access lkt_bool) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_xref_entry_point";
   --  Designates entities that are entry point for the xref solving
   --  infrastructure. If this returns true, then nameres_diagnostics can be
   --  called on it.

           
   

   
   

   function lkt_argument_f_name
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_argument_f_name";
   --  This field may be null even when there are no parsing errors.

           
   

   
   

   function lkt_argument_f_value
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_argument_f_value";
   --  This field can contain one of the following nodes: :ada:ref:`Any_Of`,
   --  :ada:ref:`Array_Literal`, :ada:ref:`Bin_Op`, :ada:ref:`Block_Expr`,
   --  :ada:ref:`Call_Expr`, :ada:ref:`Cast_Expr`, :ada:ref:`Dot_Expr`,
   --  :ada:ref:`Error_On_Null`, :ada:ref:`Generic_Instantiation`,
   --  :ada:ref:`If_Expr`, :ada:ref:`Isa`, :ada:ref:`Keep_Expr`,
   --  :ada:ref:`Lambda_Expr`, :ada:ref:`Lit`, :ada:ref:`Logic_Assign`,
   --  :ada:ref:`Logic_Expr`, :ada:ref:`Logic_Predicate`,
   --  :ada:ref:`Logic_Propagate`, :ada:ref:`Logic_Unify`,
   --  :ada:ref:`Match_Expr`, :ada:ref:`Not_Expr`, :ada:ref:`Paren_Expr`,
   --  :ada:ref:`Raise_Expr`, :ada:ref:`Ref_Id`, :ada:ref:`Subscript_Expr`,
   --  :ada:ref:`Try_Expr`, :ada:ref:`Un_Op`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_base_lexer_case_rule_alt_f_send
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_base_lexer_case_rule_alt_f_send";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_lexer_case_rule_cond_alt_f_cond_exprs
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lexer_case_rule_cond_alt_f_cond_exprs";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_base_match_branch_f_expr
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_base_match_branch_f_expr";
   --  This field can contain one of the following nodes: :ada:ref:`Any_Of`,
   --  :ada:ref:`Array_Literal`, :ada:ref:`Bin_Op`, :ada:ref:`Block_Expr`,
   --  :ada:ref:`Call_Expr`, :ada:ref:`Cast_Expr`, :ada:ref:`Dot_Expr`,
   --  :ada:ref:`Error_On_Null`, :ada:ref:`Generic_Instantiation`,
   --  :ada:ref:`If_Expr`, :ada:ref:`Isa`, :ada:ref:`Keep_Expr`,
   --  :ada:ref:`Lambda_Expr`, :ada:ref:`Lit`, :ada:ref:`Logic_Assign`,
   --  :ada:ref:`Logic_Expr`, :ada:ref:`Logic_Predicate`,
   --  :ada:ref:`Logic_Propagate`, :ada:ref:`Logic_Unify`,
   --  :ada:ref:`Match_Expr`, :ada:ref:`Not_Expr`, :ada:ref:`Paren_Expr`,
   --  :ada:ref:`Raise_Expr`, :ada:ref:`Ref_Id`, :ada:ref:`Subscript_Expr`,
   --  :ada:ref:`Try_Expr`, :ada:ref:`Un_Op`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_base_match_branch_p_match_part
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_base_match_branch_p_match_part";
   --  Return the "match" part of the branch, either a pattern branch or a
   --  legacy match branch with variable declaration.

           
   

   
   

   function lkt_match_branch_f_decl
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_match_branch_f_decl";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_pattern_match_branch_f_pattern
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_pattern_match_branch_f_pattern";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Binding_Pattern`, :ada:ref:`Bool_Pattern`,
   --  :ada:ref:`Extended_Pattern`, :ada:ref:`Filtered_Pattern`,
   --  :ada:ref:`Integer_Pattern`, :ada:ref:`List_Pattern`,
   --  :ada:ref:`Not_Pattern`, :ada:ref:`Null_Pattern`, :ada:ref:`Or_Pattern`,
   --  :ada:ref:`Paren_Pattern`, :ada:ref:`Regex_Pattern`,
   --  :ada:ref:`Tuple_Pattern`, :ada:ref:`Type_Pattern`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_block_expr_clause_f_clause
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_block_expr_clause_f_clause";
   --  This field can contain one of the following nodes: :ada:ref:`Val_Decl`,
   --  :ada:ref:`Var_Bind`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_class_qualifier_p_as_bool
     (Node : lkt_node_Ptr;


      Value_P : access lkt_bool) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_class_qualifier_p_as_bool";
   --  Return whether this node is present

           
   

   
   

   function lkt_decl_f_syn_name
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_decl_f_syn_name";
   --  This field may be null even when there are no parsing errors.

           
   

   
   

   function lkt_decl_p_custom_image
     (Node : lkt_node_Ptr;


      Value_P : access lkt_string_type) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_decl_p_custom_image";
   --  Return the image string using entity information.

           
   

   
   

   function lkt_decl_p_decl_type_name
     (Node : lkt_node_Ptr;


      Value_P : access lkt_string_type) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_decl_p_decl_type_name";
   --  Return the name of the declaration type, as it should be seen by
   --  users/shown in diagnostics.

           
   

   
   

   function lkt_decl_p_as_bare_decl
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_decl_p_as_bare_decl";
   --  Get this declaration without rebindings information.

           
   

   
   

   function lkt_decl_p_get_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_decl_p_get_type";
   --  Return the type of the Decl.

           
   

   
   

   function lkt_decl_p_get_cast_type
     (Node : lkt_node_Ptr;

         Cast_To :
            access constant
            lkt_node;

      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_decl_p_get_cast_type";
   --  If we are casting an entity (Self) to something that is not an entity,
   --  make it an entity.

           
   

   
   

   function lkt_decl_p_get_keep_type
     (Node : lkt_node_Ptr;

         Keep_Type :
            access constant
            lkt_node;

      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_decl_p_get_keep_type";
   --  Return the type of Entity when we only keep elements of type keep_type.
   --  If we are casting an entity (Self) to something that is not an entity,
   --  make it an entity.

           
   

   
   

   function lkt_decl_p_get_suffix_type
     (Node : lkt_node_Ptr;

         Prefix_Type :
            access constant
            lkt_node;

      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_decl_p_get_suffix_type";
   --  If we are accessing a ParseField of an entity, then that field's type
   --  also needs to be an entity.

           
   

   
   

   function lkt_decl_p_is_generic
     (Node : lkt_node_Ptr;


      Value_P : access lkt_bool) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_decl_p_is_generic";
   --  Returns whether the Decl is generic.

